--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Chatting</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      
+    </div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
